objects/Reference_Account_Information__c.object
<CustomObject>
    <description>Object to identify when an account can be used as a reference on different products: Logo, Speeches, Presentations, Proposals.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>BW 7272015 Sprint 2</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Account Information</relationshipLabel>
        <relationshipName>Reference_Account_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Stop Loss</fullName>
                </value>
                <value>
                    <fullName>AHG</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Spec/Agg Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Specific Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Voluntary Disability</fullName>
                </value>
                <value>
                    <fullName>Voluntary Life</fullName>
                </value>
                <value>
                    <fullName>Worksite Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speeches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speeches</label>
        <type>Checkbox</type>
    </fields>
    <label>Reference Account Information</label>
    <nameField>
        <displayFormat>RAI-{000000}</displayFormat>
        <label>Reference Account Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Account Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>